Fikset bygning af palm-udgaven.

--- a/distro/palm/home.html
+++ b/distro/palm/home.html
@@ -13,7 +13,7 @@
 <h1>Linux - Friheden til at vælge open source distribution</h1>
 
     <ul>
-    <li> <a href="file:../bog/index.html" 
+    <li> <a href="file:../distro/index.html" 
            MAXDEPTH="2" 
            NOIMAGES>Start her</a></li>
     </ul>
