Rettet en lille tastefejl, så palm-udgaven rent faktisk kommer til at indeholde noget.

--- a/forsker/palm/home.html
+++ b/forsker/palm/home.html
@@ -13,7 +13,7 @@
 <h1>Linux - Friheden til at studere og forske</h1>
 
     <ul>
-    <li> <a href="file:../forske/index.html" 
+    <li> <a href="file:../forsker/index.html" 
            MAXDEPTH="2" 
            NOIMAGES>Start her</a></li>
     </ul>
