--- a/misc/external.html
+++ b/misc/external.html
@@ -6,4 +6,4 @@
 
 <P>Desværre - denne reference er ikke læst ind med Plucker. 
 Det er sandsynligvis en ekstern hjemmeside du bliver nødt til
-at se på Internettet.</P>
+at se på internettet.</P>
