--- a/applikationer/skrivevejledning.html
+++ b/applikationer/skrivevejledning.html
@@ -33,8 +33,8 @@
     digest, osv. Programmer der løser 99% af en opgave og er nemme
     at bruge/gå til, er gode programmer at beskrive, fremfor
     programmer der løser 110% af en opgave, men kræver memorering
-    af 18 kommandolinie options, en dyb forståelse af syntaksen i
-    perl, regulære udtryk og asynkron montering af NFS filsystemer.
+    af 18 kommandolinjetilvalg, en dyb forståelse af syntaksen i
+    perl, regulære udtryk og asynkron montering af NFS-filsystemer.
     Der skal også være plads til den sidste slags programmer, men
     hvis der mangler en "programtype", så start med at skrive om
     den første slags.</P>
