--- a/applikationer/skrivevejledning.html
+++ b/applikationer/skrivevejledning.html
@@ -69,8 +69,8 @@
 
     <P>Nogen gange vil det du skriver, være et nyt selvstændigt
     "emne", f.eks. "Instant message programmer". I sådanne tilfælde
-    er det en god ide at indlede med et par afsnit der fortæller
-    hvad der i det hele taget er tale om. Det er også en god ide at
+    er det en god idé at indlede med et par afsnit der fortæller
+    hvad der i det hele taget er tale om. Det er også en god idé at
     henvise til et par meget overordnede hjemmesider om emnet,
     enten i starten af emnet, eller som afslutning.</P>
 
