Endnu et ÅDL værk

--- a/licens/vaerker.html
+++ b/licens/vaerker.html
@@ -16,6 +16,9 @@
 
 
 <ul>
+
+<li><a href="http://www.schunk.dk/assembly.html">x86 assembler-guide</a> af Lars K. Schunk</li>
+
 <li><a href="http://javabog.dk">Objektorienteret programmering i Java</a> af 
 Jacob Nordfalk</li>
 
