todo.html Rettelse af mail adresse.

--- a/c/todo.html
+++ b/c/todo.html
@@ -41,7 +41,7 @@
       <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz 
       &lt;kim@sslug.dk&gt;)</li>
       <li>Bidrag, forslag og redaktionel linie: kontakt Donald
-      Axel &lt;donald_j_axel@get2net.dk&gt;
+      Axel &lt;donax-snavela-get2net.dk&gt;
     </ul>
     <!-- Text slut -->
     <!-- Husk din email-adresse: -->
